Fixed the overflow.

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,8 @@
   padding: 0;
   box-sizing: border-box;
 }
-body {
+body,
+html {
   font-family: "Roboto", sans-serif;
   overflow-x: hidden;
 }
@@ -183,7 +184,6 @@ nav {
   .about {
     padding: 1rem;
   }
-
   .about-brand {
     font-size: 1rem;
   }
